--- a/src/locales/zh-CN.json
+++ b/src/locales/zh-CN.json
@@ -22,5 +22,28 @@
       "name": "帮助",
       "learn": "了解更多"
     }
+  },
+  "toolbar": {
+    "rotateLeft": {
+      "title": "向左旋转 90°"
+    },
+    "rotateRight": {
+      "title": "向右旋转 90°"
+    },
+    "flipVertical": {
+      "title": "垂直翻转"
+    },
+    "flipHorizontal": {
+      "title": "水平翻转"
+    },
+    "resetZoom": {
+      "title": "重置缩放"
+    },
+    "zoomOut": {
+      "title": "缩小"
+    },
+    "zoomIn": {
+      "title": "放大"
+    }
   }
 }
