--- a/src/locales/en-US.json
+++ b/src/locales/en-US.json
@@ -7,6 +7,7 @@
     },
     "view": {
       "name": "View",
+      "propertyInfo": "Show property",
       "resetZoom": "Reset Zoom",
       "zoomOut": "Zoom Out",
       "zoomIn": "Zoom In",
@@ -44,6 +45,9 @@
     },
     "zoomIn": {
       "title": "Zoom in"
+    },
+    "propertyInfo": {
+      "title": "Show property"
     }
   }
 }
