--- a/src/locales/zh-CN.json
+++ b/src/locales/zh-CN.json
@@ -7,6 +7,7 @@
     },
     "view": {
       "name": "查看",
+      "propertyInfo": "查看属性",
       "resetZoom": "重置缩放",
       "zoomOut": "缩小",
       "zoomIn": "放大",
@@ -44,6 +45,9 @@
     },
     "zoomIn": {
       "title": "放大"
+    },
+    "propertyInfo": {
+      "title": "查看属性"
     }
   }
 }
