feat: add recent files

--- a/src/locales/en-US.json
+++ b/src/locales/en-US.json
@@ -3,6 +3,10 @@
     "file": {
       "name": "File",
       "openFile": "Open File",
+      "recentFiles": {
+        "name": "Open Recent",
+        "clearFiles": "Clear Files"
+      },
       "print": "Print..."
     },
     "view": {
