--- a/src/locales/en-US.json
+++ b/src/locales/en-US.json
@@ -7,7 +7,8 @@
         "name": "Open Recent",
         "clearFiles": "Clear Files"
       },
-      "print": "Print..."
+      "print": "Print...",
+      "settings": "Settings"
     },
     "view": {
       "name": "View",
@@ -53,5 +54,10 @@
     "propertyInfo": {
       "title": "Show property"
     }
+  },
+  "settings": {
+    "title": "Settings",
+    "closeBtnTitle": "Close settings",
+    "canvasBackgroundColor": "Canvas background color"
   }
 }
