feat: support fullscreen mode

--- a/src/locales/en-US.json
+++ b/src/locales/en-US.json
@@ -16,6 +16,8 @@
       "resetZoom": "Reset Zoom",
       "zoomOut": "Zoom Out",
       "zoomIn": "Zoom In",
+      "enterFullScreen": "Enter Full Screen",
+      "exitFullScreen": "Exit Full Screen",
       "rotateLeft": "Rotate Left",
       "rotateRight": "Rotate Right",
       "flipVertical": "Flip Vertical",
