fix: skip the unsupported file (#9)

--- a/src/locales/en-US.json
+++ b/src/locales/en-US.json
@@ -61,5 +61,8 @@
     "title": "Settings",
     "closeBtnTitle": "Close settings",
     "canvasBackgroundColor": "Canvas background color"
+  },
+  "errors": {
+    "unsupportFormat": "Unsupport format"
   }
 }
