--- a/src/locales/zh-CN.json
+++ b/src/locales/zh-CN.json
@@ -61,5 +61,8 @@
     "title": "设置",
     "closeBtnTitle": "关闭设置",
     "canvasBackgroundColor": "画布背景色"
+  },
+  "errors": {
+    "unsupportFormat": "不支持的格式"
   }
 }
