--- a/src/locales/zh-CN.json
+++ b/src/locales/zh-CN.json
@@ -22,6 +22,11 @@
       "close": "关闭",
       "quit": "退出"
     },
+    "navigation": {
+      "name": "导航",
+      "prev": "上一张",
+      "next": "下一张"
+    },
     "view": {
       "name": "查看",
       "propertyInfo": "查看属性",
