feat: translate the empty tip (#18)

--- a/src/locales/en-US.json
+++ b/src/locales/en-US.json
@@ -122,6 +122,9 @@
       }
     ]
   },
+  "tips": {
+    "empty": "You can drap and drop file to here."
+  },
   "errors": {
     "unsupportFormat": "Unsupport format"
   }
